--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ li { list-style: none; }
  */
 
 body {
-    background: #ffffff;
+    background: #fafafa;
     font-family: "proxima-nova", 'Helvetica Neue', Helvetica-Neue, Helvetica, Arial, sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -33,8 +33,8 @@ p {
 }
 
 #header {
-    background: #E2E2E2;
-    border-bottom: 1px solid #CBCBCB;
+    background: #f5f5f5;
+    border-bottom: 1px solid #e2e2e2;
     height: 80px;
     padding: 20px 0px 0px 0px;
 }
