Added a new header to the left side.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="rick harrison, nine robot, state college, iphone, android, music" />
     <meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am running the development shop Nine Robot that I founded alongside two of my close friends. Previously, I was part of the founding engineering team at Sincerely." />
-    
+
     <title>{{ page.title }}</title>
 
     <script type="text/javascript" src="//use.typekit.net/eeq2ulk.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    
-    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+
+    <link rel="stylesheet" type="text/css" href="/styles/main.css" />
 </head>
 <body>
 
 <div id="header">
-    <h1>Rick Harrison</h1>
+    <div class="header-wrap">
+        <img class="header-logo" src="/images/ninerobot.png" />
+        <h1>Rick Harrison</h1>
+        <p>iOS/node.js/all-around developer</p>
+        <p>Senior Engineer @ Apple<p>
+        <p>San Francisco, CA</p>
+
+        <ul class="header-social">
+            <li><a class="ss-icon ss-octocat" href="https://github.com/rickharrison"></a></li>
+            <li><a class="ss-icon ss-twitter" href="https://twitter.com/rickharrison"></a></li>
+            <li><a class="ss-icon ss-mail" href="mailto:r@rickharrison.me"></a></li>
+        </ul>
+
+        <a class="header-blog" href="/blog">Check Out My Blog</a>
+    </div>
 </div>
-<div id="border"></div>
 
 <div id="menu" class="section">
     <a href="/blog" alt="Blog">Blog</a><span class="menu_spacer"></span>
