Re-wrote most of the css to make it responsive.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,15 +32,11 @@
     </div>
 </div>
 
-<div id="menu" class="section">
-    <a href="/blog" alt="Blog">Blog</a><span class="menu_spacer"></span>
-    <a href="http://twitter.com/rickharrison" alt="Twitter">Twitter</a><span class="menu_spacer"></span>
-    <a href="http://github.com/rickharrison" alt="GitHub">GitHub</a><span class="menu_spacer"></span>
-    <a href="http://stackoverflow.com/users/205007/rickharrison" alt="Stack Overflow">Stack Overflow</a><span class="menu_spacer"></span>
-    <a href="http://news.ycombinator.com/user?id=rickharrison" alt="Hacker News">Hacker News</a>
-</div>
+<div class="content">
 
 {{ content }}
+
+</div>
 
 </body>
 </html>
