Added a section for side projects.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
 
 <div id="header">
     <div class="header-wrap">
-        <img class="header-logo" src="/images/ninerobot.png" />
-        <h1>Rick Harrison</h1>
+        <a class="header-logo" href="/"><span></span></a>
+        <h1><a href="/">Rick Harrison</a></h1>
         <p>iOS/node.js/all-around developer</p>
         <p>Senior Engineer @ Apple<p>
         <p>San Francisco, CA</p>
