--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,35 @@ p {
 }
 
 .header-logo {
-    margin-bottom: 15px;
+    background: url('/images/ninerobot.png') no-repeat;
+    display: block;
+    height: 114px;
+    margin: 0 auto 15px auto;
+    position: relative;
+    width: 80px;
+}
+
+.header-logo span {
+    background: url('/images/ninerobot.png') no-repeat;
+    background-position: 0 -114px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
+    -webkit-transition-property: opacity;
+    -moz-transition-property: opacity;
+    -o-transition-property: opacity;
+    transition-property: opacity;
+    -webkit-transition-duration: .25s;
+    -moz-transition-duration: .25s;
+    -o-transition-duration: .25s;
+    transition-duration: .25s;
+}
+
+.header-logo:hover span {
+    opacity: 1;
 }
 
 .header-social {
@@ -70,7 +98,7 @@ p {
 }
 
 .header-blog, .header-blog:visited {
-    border: 5px solid #2e3b40;
+    border: 4px solid #2e3b40;
     border-radius: 25px;
     color: #2e3b40;
     display: inline-block;
@@ -132,6 +160,12 @@ h3.home-blog {
     padding-bottom: 10px;
 }
 
+.opensource-list h3.home-blog {
+    margin: 0;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
 /* Sections */
 
 .content {
@@ -141,6 +175,15 @@ h3.home-blog {
 
 .content h2 {
     padding-top: 14px;
+}
+
+.side-list {
+    padding-top: 6px;
+    padding-bottom: 30px;
+}
+
+.side-list p {
+    margin-bottom: 16px;
 }
 
 .work-list {
@@ -174,10 +217,6 @@ span.highlight {
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
-.opensource-list {
-    padding-top: 10px;
-}
-
 a.screenshot, a.screenshot:visited {
     background: #E2E2E2;
     display: block;
@@ -191,19 +230,39 @@ a.screenshot:hover, a.screenshot:active {
     background: #444444;
 }
 
+a.side-screenshot, a.side-screenshot:visited {
+    background: #e2e2e2;
+    display: block;
+    float: left;
+    height: 258px;
+    margin-right: 29px;
+    margin-top: 4px;
+    padding: 5px;
+    width: 458px;
+}
+
+a.side-screenshot:hover, a.side-screenshot:active {
+    background: #444444;
+}
+
 /* Links */
 
 a {
+    color: #2e3b40;
     outline:none;
     text-decoration:none;
-    -webkit-transition-property:background-color, color, border-color;
-    -moz-transition-property:background-color, color, border-color;
-    -o-transition-property:background-color, color, border-color;
-    transition-property:background-color, color, border-color;
-    -webkit-transition-duration:.25s;
-    -moz-transition-duration:.25s;
-    -o-transition-duration:.25s;
-    transition-duration:.25s;
+    -webkit-transition-property: background-color, color, border-color;
+    -moz-transition-property: background-color, color, border-color;
+    -o-transition-property: background-color, color, border-color;
+    transition-property: background-color, color, border-color;
+    -webkit-transition-duration: .25s;
+    -moz-transition-duration: .25s;
+    -o-transition-duration: .25s;
+    transition-duration: .25s;
+}
+
+a:hover {
+    color: #ff4200;
 }
 
 a:active {
@@ -223,7 +282,7 @@ p a:hover, p a:active {
     text-decoration: none;
 }
 
-.blog h2 a .home-blog a, .blog h2 a:visited, .home-blog a:visited {
+.blog h2 a, .home-blog a, .blog h2 a:visited, .home-blog a:visited {
     color: #ff4200;
     text-decoration: none;
     line-height: 36px;
