Added responsive styling for mobile.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,13 @@
         <p>San Francisco, CA</p>
 
         <ul class="header-social">
+            <li class="narrow-blog"><a class="header-blog" href="/blog">Blog</a></li>
             <li><a class="ss-icon ss-octocat" href="https://github.com/rickharrison"></a></li>
             <li><a class="ss-icon ss-twitter" href="https://twitter.com/rickharrison"></a></li>
             <li><a class="ss-icon ss-mail" href="mailto:r@rickharrison.me"></a></li>
         </ul>
 
-        <a class="header-blog" href="/blog">Check Out My Blog</a>
+        <a class="header-blog wide-blog" href="/blog">Check Out My Blog</a>
     </div>
 </div>
 
