Added meta tags for iOS.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="rick harrison, nine robot, state college, iphone, android, music" />
     <meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am running the development shop Nine Robot that I founded alongside two of my close friends. Previously, I was part of the founding engineering team at Sincerely." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <title>{{ page.title }}</title>
 
