--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="blog post">
-    <h2>{{ page.title }}</h2>
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.date | date: "%B %Y" }}</p>
 
     {{content}}
 </div>
