--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,17 @@ h3.home-title {
     padding-top: 0px;
 }
 
+h3.home-title.no-padding {
+    padding: 0;
+}
+
+h4 {
+    color: #19272d;
+    font-size: 18px;
+    margin: 0;
+    padding-bottom: 20px;
+}
+
 /* Sections */
 
 .content {
@@ -325,7 +336,7 @@ p a:hover, p a:active {
 .blog h2 {
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 0;
 }
 
 .blog p {
@@ -333,10 +344,11 @@ p a:hover, p a:active {
     text-rendering: optimizeLegibility;
 }
 
-.post h2 {
+.post h1 {
     color: #ff4200;
     font-size: 36px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
+    padding-top: 15px;
 }
 
 /*
