Added an atom xml feed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="author" content="Rick Harrison" />
     <meta name="keywords" content="rick harrison, nine robot, state college, iphone, android, music" />
     <meta name="description" content="I am a software developer focused on innovation through web and mobile. Currently, I am running the development shop Nine Robot that I founded alongside two of my close friends. Previously, I was part of the founding engineering team at Sincerely." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -12,6 +13,7 @@
     <script type="text/javascript" src="//use.typekit.net/eeq2ulk.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
+    <link href="http://rickharrison.me/atom.xml" rel="alternate" title="Rick Harrison" type="application/atom+xml" />
     <link rel="stylesheet" type="text/css" href="/styles/main.css" />
 </head>
 <body>
