--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 
     <link href="http://rickharrison.me/atom.xml" rel="alternate" title="Rick Harrison" type="application/atom+xml" />
     <link rel="stylesheet" type="text/css" href="/styles/main.css" />
+
+    <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
+    <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
 </head>
 <body>
 
