Made some edits to the dynamic segments post.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <li><a class="ss-icon ss-mail" href="mailto:r@rickharrison.me"></a></li>
         </ul>
 
-        <a class="header-blog wide-blog" href="/blog">Check Out My Blog</a>
+        <a class="header-blog wide-blog" href="/blog">View Blog</a>
     </div>
 </div>
 
