Added narwhal under side projects.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
         <a class="header-logo" href="/"><span></span></a>
         <h1><a href="/">Rick Harrison</a></h1>
         <p>iOS/node.js/all-around developer</p>
-        <p>Senior Engineer @ Apple<p>
+        <p>Cofounder of Nine Robot</p>
+        <p>Previously, senior engineer @ Apple<p>
         <p>San Francisco, CA</p>
 
         <ul class="header-social">
