--- a/styles/main.css
+++ b/styles/main.css
@@ -211,6 +211,10 @@ h4 {
     margin-bottom: 16px;
 }
 
+.side-list .side-item {
+    margin-bottom: 30px;
+}
+
 .side-content {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
