Updates personal information.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,7 @@
         <a class="header-logo" href="/"><span></span></a>
         <h1><a href="/">Rick Harrison</a></h1>
         <p>iOS/node.js/all-around developer</p>
-        <p>Co-founder of Nine Robot</p>
-        <p>Previously, senior engineer @ Apple<p>
+        <p>Co-Founder of <a href="https://getmeadow.com">Meadow</a></p>
         <p>San Francisco, CA</p>
 
         <ul class="header-social">
